force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <description>For the field team to log their daily visits.</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>Visit - {0}</displayFormat>
        <label>Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>