force-app/main/default/objects/Visit__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Complaint Assigned to</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>