force-app/main/default/objects/Visit__c/fields/Contact_Later_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Later_Visit_Date__c</fullName>
    <description>Contact Later Visit Date</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>