force-app/main/default/objects/Visit__c/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <label>Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Rate Negotiation (Upto - 1)</fullName>
            </value>
            <value>
                <fullName>Not Interested / rate more than - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>