force-app/main/default/objects/Visit__c/fields/Interest_Level_New__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level_New__c</fullName>
    <label>Dealer Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Not Interested in Pond Lining</fullName>
            </value>
            <value>
                <fullName>Not Interested - Working for Other Pond Lining Company</fullName>
            </value>
            <value>
                <fullName>Contact Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>