force-app/main/default/objects/Visit__c/fields/Measurement_Done__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measurement Done</label>
    <type>Checkbox</type>
</CustomField>