force-app/main/default/objects/Visit__c/fields/Name_of_Farmer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Farmer__c</fullName>
    <label>Name of Farmer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>