force-app/main/default/objects/Visit__c/fields/Name_of_the_New_dealer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_New_dealer__c</fullName>
    <label>Name of the New dealer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>