force-app/main/default/objects/Visit__c/fields/Name_of_the_New_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_New_Distributor__c</fullName>
    <label>Name of the New Distributor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>