force-app/main/default/objects/Visit__c/fields/New_dealer_Distributor__c.field-meta.xml
<CustomField>
    <fullName>New_dealer_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New dealer / Distributor</label>
    <type>Checkbox</type>
</CustomField>