force-app/main/default/objects/Visit__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lakhan Parkhe</fullName>
            </value>
            <value>
                <fullName>BALTM04-Pradip Lohakare</fullName>
            </value>
            <value>
                <fullName>Suresh Pitale</fullName>
            </value>
            <value>
                <fullName>Sharad Gavhane</fullName>
            </value>
            <value>
                <fullName>BALTM01-Vitthal Dhere</fullName>
            </value>
            <value>
                <fullName>KRUTM01-Anil Kushawaha</fullName>
            </value>
            <value>
                <fullName>Himanshu Kushwaha</fullName>
            </value>
            <value>
                <fullName>Arvind Kushwaha</fullName>
            </value>
            <value>
                <fullName>Sachin Bansode</fullName>
            </value>
            <value>
                <fullName>SARTM02-Shekhar Zarekar</fullName>
            </value>
            <value>
                <fullName>ASHTM01-Bharat Bhand</fullName>
            </value>
            <value>
                <fullName>ASHHG02-Sunil Dongardive</fullName>
            </value>
            <value>
                <fullName>Chanilal singh</fullName>
            </value>
            <value>
                <fullName>ASHHG04-Rajesh Kumar</fullName>
            </value>
            <value>
                <fullName>SAITM01-Rahul Yadav</fullName>
            </value>
            <value>
                <fullName>JINHG01-Ainl Jhinjha</fullName>
            </value>
            <value>
                <fullName>JINHG02-pankaj Godara</fullName>
            </value>
            <value>
                <fullName>Pawan Kadwa</fullName>
            </value>
            <value>
                <fullName>Chothelal</fullName>
            </value>
            <value>
                <fullName>Tejas Kadam</fullName>
            </value>
            <value>
                <fullName>Santosh Helwar</fullName>
            </value>
            <value>
                <fullName>Umesh Yadav</fullName>
            </value>
            <value>
                <fullName>Viswanath Awati</fullName>
            </value>
            <value>
                <fullName>Satosh Yadav</fullName>
            </value>
            <value>
                <fullName>Avinash Chivhan</fullName>
            </value>
            <value>
                <fullName>Bapu Shirsath</fullName>
            </value>
            <value>
                <fullName>Pradeep Dhakad</fullName>
            </value>
            <value>
                <fullName>Rahul Dhakad</fullName>
            </value>
            <value>
                <fullName>Ram Sadan</fullName>
            </value>
            <value>
                <fullName>AVATM01-Abhay Yadav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>