force-app/main/default/objects/Visit__c/fields/Operator_Machine_Used__c.field-meta.xml
<CustomField>
    <fullName>Operator_Machine_Used__c</fullName>
    <label>Operator Machine Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Twinny</fullName>
            </value>
            <value>
                <fullName>Handgun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>