force-app/main/default/objects/Visit__c/fields/Pond_Digging__c.field-meta.xml
<CustomField>
    <fullName>Pond_Digging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pond Digging</label>
    <type>Checkbox</type>
</CustomField>