force-app/main/default/objects/Visit__c/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Information</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>