force-app/main/default/objects/Visit__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre installation</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Post Installation</fullName>
            </value>
            <value>
                <fullName>Gift Distribution</fullName>
            </value>
            <value>
                <fullName>Casual Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>