force-app/main/default/objects/Visit__c/fields/Quality_Inspector__c.field-meta.xml
<CustomField>
    <fullName>Quality_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>