force-app/main/default/objects/Visit__c/fields/Quality_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Quality_Visit_Date__c</fullName>
    <label>Quality Visit Date</label>
    <type>Date</type>
</CustomField>