force-app/main/default/objects/Visit__c/fields/Quoted_Farmer_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Farmer_Price__c</fullName>
    <label>Quoted Farmer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>