force-app/main/default/objects/Visit__c/fields/Reason_for_this_meeting__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_this_meeting__c</fullName>
    <label>Reason for this meeting</label>
    <type>TextArea</type>
</CustomField>