force-app/main/default/objects/Visit__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason For Visit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>