force-app/main/default/objects/Visit__c/fields/Statenew__c.field-meta.xml
<CustomField>
    <fullName>Statenew__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>