force-app/main/default/objects/Visit__c/fields/Type_of_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Subsidy__c</fullName>
    <label>Type of Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RKVY</fullName>
            </value>
            <value>
                <fullName>POCHRA</fullName>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
            <value>
                <fullName>NHM</fullName>
            </value>
            <value>
                <fullName>No Subsidy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>