force-app/main/default/objects/Visit__c/fields/Type_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Visit__c</fullName>
    <label>Type Of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Farmer / Pond Visit</fullName>
            </value>
            <value>
                <fullName>Current Customer Visit</fullName>
            </value>
            <value>
                <fullName>Dealer / Distributor Visit</fullName>
            </value>
            <value>
                <fullName>Complaint Visit</fullName>
            </value>
            <value>
                <fullName>Govt. Official Visit</fullName>
            </value>
            <value>
                <fullName>Group Visit</fullName>
            </value>
            <value>
                <fullName>Other Visit</fullName>
            </value>
            <value>
                <fullName>Problem Visit</fullName>
            </value>
            <value>
                <fullName>Routine Visit</fullName>
                <isActive>false</isActive>
                <label>Routine Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>