force-app/main/default/objects/Visit__c/fields/Upload_Photo_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Upload_Photo_of_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Photo of Visit</label>
    <type>Checkbox</type>
</CustomField>