force-app/main/default/objects/Visit__c/fields/Warranty_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>