force-app/main/default/objects/Visit__c/fields/What_Gift_Given__c.field-meta.xml
<CustomField>
    <fullName>What_Gift_Given__c</fullName>
    <label>What Gift Given</label>
    <length>50</length>
    <type>Text</type>
</CustomField>