force-app/main/default/objects/Visit__c/fields/Who_are_you_visiting__c.field-meta.xml
<CustomField>
    <fullName>Who_are_you_visiting__c</fullName>
    <label>Who are you visiting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>