force-app/main/default/objects/Visit__c/recordTypes/Complaint_Visit.recordType-meta.xml
<RecordType>
    <fullName>Complaint_Visit</fullName>
    <active>true</active>
    <description>Should Be Visible On Only Complaint Object</description>
    <label>Complaint Visit</label>
</RecordType>