force-app/main/default/objects/Visit__c/recordTypes/Current_Customer_Visit.recordType-meta.xml
<RecordType>
    <fullName>Current_Customer_Visit</fullName>
    <active>false</active>
    <label>Current Customer Visit</label>
</RecordType>