force-app/main/default/objects/Visit__c/recordTypes/Dealer_Distributor_Visit.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Distributor_Visit</fullName>
    <active>false</active>
    <label>Dealer / Distributor Visit</label>
</RecordType>