force-app/main/default/objects/Visit__c/recordTypes/Govt_Official_Visit.recordType-meta.xml
<RecordType>
    <fullName>Govt_Official_Visit</fullName>
    <active>false</active>
    <label>Govt. Official Visit</label>
</RecordType>