force-app/main/default/objects/Visit__c/recordTypes/Group_Visit.recordType-meta.xml
<RecordType>
    <fullName>Group_Visit</fullName>
    <active>false</active>
    <label>Group Visit</label>
</RecordType>