force-app/main/default/objects/Visit__c/recordTypes/New_Farmer_Pond_Vist.recordType-meta.xml
<RecordType>
    <fullName>New_Farmer_Pond_Vist</fullName>
    <active>true</active>
    <label>New Farmer / Pond Vist</label>
</RecordType>