force-app/main/default/objects/Visit__c/recordTypes/Other_Visit.recordType-meta.xml
<RecordType>
    <fullName>Other_Visit</fullName>
    <active>false</active>
    <label>Other Visit</label>
</RecordType>